test/sema/param.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:20: error: failed to resolve type 'customType'
fn foo(x: unit, y: customType): unit {}

// CHECK: [[# @LINE + 1 ]]:22: error: failed to resolve type 'customType'
fn bar(x: number, y: customType): unit {}

// CHECK: [[# @LINE + 1 ]]:31: error: redeclaration of 'x'
fn redeclaredParam(x: number, x: number): unit {}

fn main(): unit {}
